--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-repeat: no-repeat;
-  background-image: url("backgroundWhite.jpg");
+  background-image: url("backgroundWhite-compressed.jpg");
   background-size: cover;
   background-position: center;
   text-align: center;
