--- a/loginstyle.css
+++ b/loginstyle.css
@@ -56,8 +56,9 @@ form button:hover {
     padding: 5px 10px; 
 }
 
-/* #messages li:nth-child(odd) {
-    background: #eee;
+/* @keyframes fadeOut{
+    from {opacity:100;}
+    to {opacity:0;}
 } */
 
 #clientCount {
