--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ h2 {
   }
 
   .menu {
-    margin: -130px 0 0 -150px;
+    margin: -120px 0 0 -150px;
   }
 
   .menuReal {
-    margin: -130px 0 0 -150px;
+    margin: -120px 0 0 -150px;
   }
 
   h2 {
@@ -171,7 +171,7 @@ h2 {
 
 @media only screen and (max-height: 570px) {
   .menu, .menuReal {
-    margin-top: -50px;
+    margin-top: -80px;
   }
 }
 
@@ -182,6 +182,17 @@ h2 {
 
   .menu, .menuReal {
     margin-top: -100px;
+  }
+
+  .anonymousText {
+    visibility: hidden;
+  }
+
+  .anonymous {
+    bottom: 10;
+    left: 10;
+    margin: 0;
+    width: 55px;
   }
 }
 
@@ -194,7 +205,7 @@ h2 {
 }
 
 @media only screen and (max-height: 340px) {
-  .menu, .menuReal, .footer {
+  .menu, .menuReal, .footer, .anonymous {
     display: none;
   }
 }
