preloader added as background image takes time to load

--- a/style.css
+++ b/style.css
@@ -8,6 +8,19 @@ body {
   text-align: center;
 }
 
+.preloader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  background-image: url('loadingPhilCoffman.gif');
+  background-size: cover;
+  background-position: 40% 40%;
+  z-index: 100;
+}
+
 .header {
   background-color: white;
   height: 63px;
