--- a/style.css
+++ b/style.css
@@ -222,3 +222,10 @@ h2 {
     display: none;
   }
 }
+
+@media only screen and (min-width: 1600px)
+{
+  .preloader-wrapper {
+    background-size: 1500 500;
+  }
+}
